--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:feather32u4]
+[env:leonardo]
 platform = atmelavr
-board = feather32u4
+board = leonardo
 framework = arduino
 lib_deps = 
 	fortyseveneffects/MIDI Library@^5.0.2
